Revert "MAINT: Fix web app"