@@ -38,7 +38,6 @@ package org.trade.ui.widget;
 import javax.swing.*;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
-import java.io.Serial;
 import java.text.NumberFormat;
 
 /**
@@ -49,7 +48,6 @@ public class IntegerField extends JFormattedTextField {
     /**
      *
      */
-    @Serial
     private static final long serialVersionUID = 3445299380677561974L;
 
     public IntegerField() {
@@ -61,7 +59,7 @@ public class IntegerField extends JFormattedTextField {
         this.setFormatterFactory(new DefaultFormatterFactory(new NumberFormatter(displayFormat),
                 new NumberFormatter(displayFormat), new NumberFormatter(editFormat)));
         this.setHorizontalAlignment(SwingConstants.RIGHT);
-        this.setValue(0);
+        this.setValue(new Integer(0));
         this.setColumns(10);
     }
 
@@ -72,11 +70,11 @@ public class IntegerField extends JFormattedTextField {
      */
     public Integer getInteger() {
         try {
-            this.setValue(Integer.valueOf(this.getText()));
+            this.setValue(new Integer(this.getText()));
         } catch (Exception ex) {
             // Do nothing will return the current value.
         }
-        return ((Number) this.getValue()).intValue();
+        return new Integer(((Number) this.getValue()).intValue());
     }
 
     /**
