@@ -1,11 +1,7 @@
 package org.trade.ui.strategy;
 
 import de.sciss.syntaxpane.DefaultSyntaxKit;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.*;
 import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,11 +12,8 @@ import org.trade.core.util.DynamicCode;
 import org.trade.core.util.TradingCalendar;
 import org.trade.dictionary.valuetype.BarSize;
 import org.trade.persistent.IPersistentModel;
+import org.trade.persistent.dao.*;
 import org.trade.persistent.dao.Rule;
-import org.trade.persistent.dao.Strategy;
-import org.trade.persistent.dao.Tradestrategy;
-import org.trade.persistent.dao.TradestrategyTest;
-import org.trade.persistent.dao.Tradingday;
 import org.trade.strategy.IStrategyRule;
 import org.trade.strategy.data.StrategyData;
 import org.trade.ui.TradeAppLoadConfig;
@@ -28,21 +21,12 @@ import org.trade.ui.base.StreamEditorPane;
 
 import javax.swing.*;
 import java.awt.*;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.io.PrintWriter;
+import java.io.*;
+import java.util.Collections;
 import java.util.List;
 import java.util.Vector;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.fail;
+import static org.junit.Assert.*;
 
 /**
  *
@@ -53,14 +37,17 @@ public class StrategyPanelTest {
     @org.junit.Rule
     public TestName name = new TestName();
 
+    private String symbol = "TEST";
     private IPersistentModel tradePersistentModel = null;
     private Tradestrategy tradestrategy = null;
     private String m_templateName = null;
     private String m_strategyDir = null;
-    private final String m_tmpDir = "temp";
+    private String m_tmpDir = "temp";
 
     /**
      * Method setUpBeforeClass.
+     *
+     * @throws java.lang.Exception
      */
     @BeforeClass
     public static void setUpBeforeClass() throws Exception {
@@ -68,6 +55,8 @@ public class StrategyPanelTest {
 
     /**
      * Method setUp.
+     *
+     * @throws java.lang.Exception
      */
     @Before
     public void setUp() throws Exception {
@@ -79,7 +68,6 @@ public class StrategyPanelTest {
             assertNotNull("setUp: Strategy dir should be not null", m_strategyDir);
             this.tradePersistentModel = (IPersistentModel) ClassFactory
                     .getServiceForInterface(IPersistentModel._persistentModel, this);
-            String symbol = "TEST";
             this.tradestrategy = TradestrategyTest.getTestTradestrategy(symbol);
             assertNotNull("setUp: tradestrategy should be not null", this.tradestrategy);
             List<Strategy> strategies = this.tradePersistentModel.findStrategies();
@@ -105,6 +93,8 @@ public class StrategyPanelTest {
 
     /**
      * Method tearDown.
+     *
+     * @throws java.lang.Exception
      */
     @After
     public void tearDown() throws Exception {
@@ -115,6 +105,8 @@ public class StrategyPanelTest {
 
     /**
      * Method tearDownAfterClass.
+     *
+     * @throws java.lang.Exception
      */
     @AfterClass
     public static void tearDownAfterClass() throws Exception {
@@ -159,24 +151,27 @@ public class StrategyPanelTest {
      *
      * @param fileName String
      * @return String
+     * @throws IOException
      */
     private String readFile(String fileName) throws IOException {
-        FileReader inputStreamReader;
-        BufferedReader bufferedReader;
+        FileReader inputStreamReader = null;
+        BufferedReader bufferedReader = null;
         inputStreamReader = new FileReader(fileName);
         bufferedReader = null;
         bufferedReader = new BufferedReader(inputStreamReader);
         String newLine = "\n";
-        StringBuilder sb = new StringBuilder();
+        StringBuffer sb = new StringBuffer();
         String line;
 
         while ((line = bufferedReader.readLine()) != null) {
-            sb.append(line).append(newLine);
+            sb.append(line + newLine);
         }
 
-        bufferedReader.close();
+        if (null != bufferedReader)
+            bufferedReader.close();
 
-        inputStreamReader.close();
+        if (null != inputStreamReader)
+            inputStreamReader.close();
         return sb.toString();
     }
 
@@ -185,6 +180,7 @@ public class StrategyPanelTest {
      *
      * @param fileName String
      * @param content  String
+     * @throws IOException
      */
     private void writeFile(String fileName, String content) throws IOException {
 
@@ -200,7 +196,7 @@ public class StrategyPanelTest {
             IBrokerModel m_brokerManagerModel = (IBrokerModel) ClassFactory
                     .getServiceForInterface(IBrokerModel._brokerTest, this);
 
-            Vector<Object> parm = new Vector<>(0);
+            Vector<Object> parm = new Vector<Object>(0);
             parm.add(m_brokerManagerModel);
             parm.add(this.tradestrategy.getStrategyData());
             parm.add(this.tradestrategy.getId());
@@ -209,7 +205,7 @@ public class StrategyPanelTest {
             dynacode.addSourceDir(new File(m_strategyDir));
             IStrategyRule strategyProxy = (IStrategyRule) dynacode.newProxyInstance(IStrategyRule.class,
                     IStrategyRule.PACKAGE + m_templateName, parm);
-            _log.info("Created Strategy{}", strategyProxy);
+            _log.info("Created Strategy" + strategyProxy);
             strategyProxy.execute();
 
             while (!strategyProxy.isWaiting()) {
@@ -232,12 +228,12 @@ public class StrategyPanelTest {
 
     @Test
     public void testDoCompileRule() {
-        File srcDirFile;
+        File srcDirFile = null;
         try {
             IBrokerModel m_brokerManagerModel = (IBrokerModel) ClassFactory
                     .getServiceForInterface(IBrokerModel._brokerTest, this);
 
-            Vector<Object> parm = new Vector<>(0);
+            Vector<Object> parm = new Vector<Object>(0);
             parm.add(m_brokerManagerModel);
             parm.add(this.tradestrategy.getStrategyData());
             parm.add(this.tradestrategy.getId());
@@ -282,13 +278,13 @@ public class StrategyPanelTest {
             StrategyPanel strategyPanel = new StrategyPanel(this.tradePersistentModel);
             List<Strategy> strategies = this.tradePersistentModel.findStrategies();
             assertNotNull("No strategies", strategies);
-            assertFalse(strategies.isEmpty());
+            assertEquals(false, strategies.isEmpty());
 
-            Strategy strategy = strategies.getFirst();
+            Strategy strategy = strategies.get(0);
             assertNotNull("testDoCompile: Strategy should be not null", strategy);
             Rule myrule = null;
 
-            strategy.getRules().sort(Rule.VERSION_ORDER);
+            Collections.sort(strategy.getRules(), Rule.VERSION_ORDER);
 
             for (Rule rule : strategy.getRules()) {
                 myrule = rule;
@@ -318,13 +314,13 @@ public class StrategyPanelTest {
             StrategyPanel strategyPanel = new StrategyPanel(this.tradePersistentModel);
             List<Strategy> strategies = this.tradePersistentModel.findStrategies();
             assertNotNull("testDoSave: Strategies should be not null", strategies);
-            assertFalse("testDoSave: Strategies should be not empty", strategies.isEmpty());
+            assertEquals("testDoSave: Strategies should be not empty", false, strategies.isEmpty());
 
-            Strategy strategy = strategies.getFirst();
+            Strategy strategy = strategies.get(0);
             assertNotNull("testDoSave: Strategy should be not null", strategy);
             Rule myrule = null;
 
-            strategy.getRules().sort(Rule.VERSION_ORDER);
+            Collections.sort(strategy.getRules(), Rule.VERSION_ORDER);
 
             for (Rule rule : strategy.getRules()) {
                 myrule = rule;
@@ -354,7 +350,7 @@ public class StrategyPanelTest {
             assertNotNull("testDoSave: Rule saved should be not null", ruleSaved.getId());
             String javaCode = new String(ruleSaved.getRule());
             assertEquals("testDoSave: Java rule test should be equals", javaCode, textArea.getText());
-            _log.info("Java file to Saved: {}", javaCode);
+            _log.info("Java file to Saved: " + javaCode);
         } catch (Exception | AssertionError ex) {
             String msg = "Error running " + name.getMethodName() + " msg: " + ex.getMessage();
             _log.error(msg);
